--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,4 +1,5 @@
 TODO: 
+- add hobby befejezni (egyéni legyen alway checked)
 login/register ha error van akkor nem jó<br>
 normális kezdőlap<br>
 hobby tileban a kép alatt van egy vékony csík <br>
