takaritas es kezdolap

--- a/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.html
+++ b/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.html
@@ -54,8 +54,9 @@
               </span>
             </mat-select-trigger>
 
-            <mat-option *ngFor="let category of categories" [value]="category" >
-              {{category.name | bilingualTranslate}}</mat-option>
+            <mat-option *ngFor="let category of categories" [value]="category">
+              {{category.name | bilingualTranslate}}
+            </mat-option>
 
           </mat-select>
         </mat-form-field>
