--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,36 +1,52 @@
-TODO: 
-- add hobby befejezni (egyéni legyen alway checked)
-login/register ha error van akkor nem jó<br>
-normális kezdőlap<br>
-hobby tileban a kép alatt van egy vékony csík <br>
-ownhobbies category hianyzik -> új letárolás <br>
-offline mód <br>
-<br>
-- szerkesztés: profil, activity, saját hobby<br>
-- törlés: saját hobby<br>
-- új nyelv: német<br>
-- Record hobby dialog telefonon nem jó<br>
-- hobby kibövítése:  hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby level: beginner, intermediate, advanced, professional<br><br>
-- profilnál a saját hobbinak csak az id-ját kéne letárolni<br>
-- tesztelés <br>
-- profil oldal a goggle bejelentkezés alapján van és nem kéri le újra a profilt<br>
+<div class="home">
+    <h1>{{"title" | translate}}</h1>
 
-<div style="margin: 20px;">
-összegző oldal: <br>
-kész funkciók: <br>
-- login <br>
-- register <br>
-- logout <br>
-- elfelejtett jelszó (email újraküldés) <br>
-- hobby lista <br>
-- saját hobbik lista <br>
-- hobby részletek   <br>
-- hobby rögzítés (új activity)  <br>
-- új saját hobbi rögzítése<br>
-- tevékenységnapló diagramokkal<br>
-- profil oldal<br>
-- nyelvváltoztatás<br>
-- kategorizált hobbik<br>
-- activity törlése<br>
+    <div class="flex_div">
+        <img [src]="'../../../assets/images/pfp.jpg'">
+        <img [src]="'../../../assets/images/pfp.jpg'">
+        <img class="lastbefore2" [src]="'../../../assets/images/pfp.jpg'">
+        <img class="lastbefore" [src]="'../../../assets/images/pfp.jpg'">
+        <img class="last" [src]="'../../../assets/images/pfp.jpg'">
+    </div>
+
+    <div class="flex_div">
+        {{"home_intro" | translate}}
+    </div>
+
+    <div class="flex_div">
+
+        TODO:
+        login/register ha error van akkor nem jó<br>
+        normális kezdőlap<br>
+        hobby tileban a kép alatt van egy vékony csík <br>
+        ownhobbies category hianyzik -> új letárolás <br>
+        offline mód <br>
+        <br>
+        - szerkesztés: profil, activity, saját hobby<br>
+        - törlés: saját hobby<br>
+        - új nyelv: német<br>
+        - Record hobby dialog telefonon nem jó<br>
+        - hobby kibövítése: hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby
+        level: beginner, intermediate, advanced, professional<br><br>
+        - profilnál a saját hobbinak csak az id-ját kéne letárolni<br>
+        - tesztelés <br>
+        <br>
+        összegző oldal: <br>
+        kész funkciók: <br>
+        - login <br>
+        - register <br>
+        - logout <br>
+        - elfelejtett jelszó (email újraküldés) <br>
+        - hobby lista <br>
+        - saját hobbik lista <br>
+        - hobby részletek <br>
+        - hobby rögzítés (új activity) <br>
+        - új saját hobbi rögzítése<br>
+        - tevékenységnapló diagramokkal<br>
+        - profil oldal<br>
+        - nyelvváltoztatás<br>
+        - kategorizált hobbik<br>
+        - activity törlése<br>
+    </div>
 
 </div>
