--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -22,6 +22,8 @@
         ownhobbies category hianyzik -> új letárolás <br>
         offline mód <br>
         <br>
+        - profilt befejezni <br>
+        - offline mód <br>
         - szerkesztés: profil, activity, saját hobby<br>
         - törlés: saját hobby<br>
         - új nyelv: német<br>
