--- a/src/app/shared/components/profile/profile.component.scss
+++ b/src/app/shared/components/profile/profile.component.scss
@@ -12,6 +12,13 @@
   flex-direction: column;
 }
 
+.grid_table{
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-template-rows: 50px 50px;
+  gap: 10px;
+}
+
 .data-div{
   display: flex;
   align-items: center;
@@ -22,8 +29,8 @@
 
 .data-div-item{
   display: flex;
-  align-items: left;
-  justify-content: left;
+  align-items: center;
+  justify-content: right;
 }
 
 .name-div{
@@ -36,6 +43,21 @@
   padding: 10px;
   border: solid 1px black;
   margin-top: 30px;
+  max-width: 600px;
+
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  flex-wrap: wrap;
+}
+
+.flex_value{
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 button{
