--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,3 +108,15 @@ html, body {
   border-radius: 5px;
   background-color: var(--light-pink-color);
 }
+
+.flex_div{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  background-color: var(--lighter-pink-color);
+  border-radius: 10px;
+  padding: 15px;
+  margin: 10px;
+}
