saját hobbi létrehozás után redirect és új hobbi nem a saját hobbikba ad és a hobbi rögzítése dialog csúszkás és hobbiknál a kép nem jó méretű és hobby tileban a kép alatt van egy vékony csík  fixek

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -15,10 +15,12 @@
 
     <div class="flex_div">
 
-        TODO:
+        TODO:<br>
+        ha 1 activity sincs, törölje a saját hobbikból<br>
+        privat oldalak levedese<br>
+        kicsi képernyő méretnél a nav menüt becsukni<br>
         login/register ha error van akkor nem jó<br>
         normális kezdőlap<br>
-        hobby tileban a kép alatt van egy vékony csík <br>
         ownhobbies category hianyzik -> új letárolás <br>
         offline mód <br>
         <br>
