--- a/src/app/publikus/components/navbar/navbar.component.html
+++ b/src/app/publikus/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container class="sidenav-container" fxFlex autosize>
-    <mat-sidenav #sidenav class="sidenav mat-elevation-z8 p-0" [opened]="false" [mode]="isScreenSmall2 ? 'over' : 'side'">
+    <mat-sidenav #sidenav class="sidenav mat-elevation-z8 p-0" [opened]="isScreenSmall2 ? false : false" 
+    [mode]="isScreenSmall2 ? 'over' : 'side'">
   
       <mat-nav-list>
 
