--- a/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.scss
+++ b/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.scss
@@ -11,6 +11,7 @@
     background-color: var(--light-pink-color);
     position: relative;
     margin: 0% !important;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 600px) {
