--- a/src/app/hobbies/components/hobby-tile/hobby-tile.component.scss
+++ b/src/app/hobbies/components/hobby-tile/hobby-tile.component.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
   margin: 10px;
   width: 300px;
-  max-height: 300px;
+  height: 300px;
   transition: transform 0.3s ease;
 }
 
@@ -17,9 +17,8 @@
 }
 
 .tile-image {
-  width: 100%;
-  height: auto;
-  display: block;
+  width: 300px;
+  height: 200px;
 }
 
 .header-colored{
