--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -2,11 +2,11 @@
     <h1>{{"title" | translate}}</h1>
 
     <div class="flex_div">
-        <img [src]="'../../../assets/images/pfp.jpg'">
-        <img [src]="'../../../assets/images/pfp.jpg'">
-        <img class="lastbefore2" [src]="'../../../assets/images/pfp.jpg'">
-        <img class="lastbefore" [src]="'../../../assets/images/pfp.jpg'">
-        <img class="last" [src]="'../../../assets/images/pfp.jpg'">
+        <img [src]="'../../../assets/images/sakk.jpg'">
+        <img [src]="'../../../assets/images/gitar.jpg'">
+        <img class="lastbefore2" [src]="'../../../assets/images/festek.jpg'">
+        <img class="lastbefore" [src]="'../../../assets/images/sport.jpg'">
+        <img class="last" [src]="'../../../assets/images/termeszet.jpg'">
     </div>
 
     <div class="flex_div">
@@ -16,7 +16,6 @@
     <div class="flex_div">
 
         TODO:<br>
-        ha 1 activity sincs, törölje a saját hobbikból<br>
         privat oldalak levedese<br>
         kicsi képernyő méretnél a nav menüt becsukni<br>
         login/register ha error van akkor nem jó<br>
@@ -24,6 +23,7 @@
         ownhobbies category hianyzik -> új letárolás <br>
         offline mód <br>
         <br>
+        - szűrés kategóriára <br>
         - profilt befejezni <br>
         - offline mód <br>
         - szerkesztés: profil, activity, saját hobby<br>
