--- a/src/app/publikus/components/home/home.component.scss
+++ b/src/app/publikus/components/home/home.component.scss
@@ -9,7 +9,8 @@ h1{
     text-align: center;
 }
 img{
-    max-width: 250px;
+    width: 250px;
+    height: 200px;
     margin: 10px;
     border-radius: 10px;
 }
