login/register ha error van akkor nem jó javítása, navbarból lginhoz függő dolgok kivétele, recordhobby loginhoz kötése

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -17,9 +17,8 @@
 
         TODO:<br>
         privat oldalak levedese<br>
-        kicsi képernyő méretnél a nav menüt becsukni<br>
-        login/register ha error van akkor nem jó<br>
         normális kezdőlap<br>
+        kategória alapján szűrés<br>
         ownhobbies category hianyzik -> új letárolás <br>
         offline mód <br>
         <br>
