--- a/src/app/publikus/components/home/home.component.scss
+++ b/src/app/publikus/components/home/home.component.scss
@@ -7,6 +7,9 @@
 }
 h1{
     text-align: center;
+    color: var(--dark-pink-color);
+    font-size: 72px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 img{
     width: 250px;
