--- a/src/app/publikus/components/login/login.component.html
+++ b/src/app/publikus/components/login/login.component.html
@@ -29,7 +29,7 @@
 
         <div class="d-flex flex-row bd-highlight mb-3 center">
             <div class="p-2 bd-highlight">
-                <button type="submit" class="btn btn-success" (click)="loginWithEmail()">
+                <button type="submit" class="btn btn-success" (click)="login(loginForm)">
                     {{ "login" | translate }}
                 </button>
             </div>
