--- a/src/app/publikus/components/navbar/navbar.component.html
+++ b/src/app/publikus/components/navbar/navbar.component.html
@@ -14,14 +14,14 @@
           {{"hobby_list" | translate}}
         </mat-list-item>
 
-        <mat-list-item matLine [routerLink]="[globalVariables.ROUTES.ownHobbies]" routerLinkActive="selected"
+        <mat-list-item *ngIf="isLoggedIn" matLine [routerLink]="[globalVariables.ROUTES.ownHobbies]" routerLinkActive="selected"
           (click)="isScreenSmall2?sidenav.toggle():{}">
           {{"own_hobbies" | translate}}
         </mat-list-item>
 
         <mat-divider></mat-divider>
 
-        <mat-list-item matLine [routerLink]="[globalVariables.ROUTES.activityWrap]" routerLinkActive="selected"
+        <mat-list-item *ngIf="isLoggedIn" matLine [routerLink]="[globalVariables.ROUTES.activityWrap]" routerLinkActive="selected"
           (click)="isScreenSmall2?sidenav.toggle():{}">
           {{"activity_wrap" | translate}}
         </mat-list-item>
