--- a/src/app/publikus/components/login/login.component.html
+++ b/src/app/publikus/components/login/login.component.html
@@ -1,62 +1,56 @@
-<div class="login-signup-container">
-    <h2>{{ "login" | translate }}</h2>
-    <form #loginForm="ngForm" id="formId" (keydown.enter)="loginWithEmail()">
-        <div class="mb-3 row">
-            <mat-form-field>
-                <mat-label for="email" class="bold">{{ "email" | translate }}</mat-label>
-                <input matInput id="email" class="form-control" type="text" required [(ngModel)]="loginUser.email"
-                    name="email" #email="ngModel">
-                <mat-error *ngIf="email.invalid">{{ "required_email_error" | translate }}</mat-error>
-            </mat-form-field>
-        </div>
+[<div class="login-signup-container">
+    <div class="with_border">
+        <h2>{{ "login" | translate }}</h2>
+        <form #loginForm="ngForm" id="formId" (keydown.enter)="loginWithEmail()">
+            <div class="mb-3 row">
+                <mat-form-field>
+                    <mat-label for="email" class="bold">{{ "email" | translate }}</mat-label>
+                    <input matInput id="email" class="form-control" type="text" required [(ngModel)]="loginUser.email"
+                        name="email" #email="ngModel">
+                    <mat-error *ngIf="email.invalid">{{ "required_email_error" | translate }}</mat-error>
+                </mat-form-field>
+            </div>
 
-        <div class="mb-3 row">
-            <mat-form-field>
-                <mat-label for="password" class="form-label bold">{{ "password" | translate }}
-                    {{"min_8_char" | translate}}</mat-label>
-                <input id="password" class="form-control" matInput [type]="hidePassword ? 'password' : 'text'"
-                    pattern="^.{7,}$" required [(ngModel)]="loginUser.password" name="password" #password="ngModel"
-                    (keydown.enter)="loginWithEmail()">
-                <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword"
-                    (keydown.enter)="$event.preventDefault()" [attr.aria-pressed]="hidePassword"
-                    [matTooltip]="'hide_password' | translate">
-                    <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-                <mat-error *ngIf="loginForm.value.password">{{ "required_password_error" | translate }}</mat-error>
-                <mat-error *ngIf="password.invalid">{{ "password_format_error" | translate }}</mat-error>
-            </mat-form-field>
-        </div>
+            <div class="mb-3 row">
+                <mat-form-field>
+                    <mat-label for="password" class="form-label bold">{{ "password" | translate }}
+                        {{"min_8_char" | translate}}</mat-label>
+                    <input id="password" class="form-control" matInput [type]="hidePassword ? 'password' : 'text'"
+                        pattern="^.{7,}$" required [(ngModel)]="loginUser.password" name="password" #password="ngModel"
+                        (keydown.enter)="loginWithEmail()">
+                    <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword"
+                        (keydown.enter)="$event.preventDefault()" [attr.aria-pressed]="hidePassword"
+                        [matTooltip]="'hide_password' | translate">
+                        <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                    <mat-error *ngIf="loginForm.value.password">{{ "required_password_error" | translate }}</mat-error>
+                    <mat-error *ngIf="password.invalid">{{ "password_format_error" | translate }}</mat-error>
+                </mat-form-field>
+            </div>
 
-        <div class="d-flex flex-row bd-highlight mb-3 center">
-            <div class="p-2 bd-highlight">
+            <div class="flex_login bigger_padding">
+                <a [routerLink]="'/' + globalVariables.ROUTES.forgotPassword">
+                    {{ "forgot_password" | translate }}
+                </a>
                 <button type="submit" class="btn btn-success" (click)="login(loginForm)">
                     {{ "login" | translate }}
                 </button>
             </div>
-            <div class="p-2 bd-highlight" mat-dialog-actions>
-                <button type="button" class="btn btn-danger" (click)="userService.navigateToPreviousPageAfterLogin()">
-                    {{ "cancel" | translate }}
-                </button>
-            </div>
+        </form>
+
+        <div class="center bigger_padding">
+            <button (click)="loginWithGoogle()" mat-raised-button class="google-login-btn center">
+                {{'signup_with_google' | translate}}
+            </button>
         </div>
 
-    </form>
-    <button (click)="loginWithGoogle()" mat-raised-button class="google-login-btn">
-        <mat-icon>account_circle</mat-icon>
-        <span>{{'signup_with_google' | translate}}</span>
-    </button>
-
-    <div class="center">
-        <a [routerLink]="'/' + globalVariables.ROUTES.forgotPassword">
-            {{ "forgot_password" | translate }}
-        </a>
-    </div>
-    <div class="center" style="display: inline-block;">
-        <span>
-            {{ "no_account" | translate }}
-            <a [routerLink]="'/' + globalVariables.ROUTES.signup">
-                {{ "signup" | translate }}
-            </a>
-        </span>
+        <div class="center bigger_padding">
+            <span>
+                {{ "no_account" | translate }}
+                <a [routerLink]="'/' + globalVariables.ROUTES.signup">
+                    {{ "signup" | translate }}
+                </a>
+            </span>
+        </div>
     </div>
 </div>
