--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,11 +71,31 @@ html, body {
 }
 
 .login-signup-container{
-  width: 70%;
-  display: block;
-  margin: auto;
-  margin-top: 15px;
-  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 15px;
+}
+
+.with_border{
+  border: 1px solid var(--dark-pink-color);
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  background-color: var(--light-pink-color);
+  min-width: 400px;
+  min-height: 450px;
+}
+
+.flex_login{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.bigger_padding{
+  padding: 10px;
 }
 
 .hobby-list {
@@ -119,4 +139,8 @@ html, body {
   border-radius: 10px;
   padding: 15px;
   margin: 10px;
+}
+
+.center{
+  text-align: center;
 }
