--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -21,6 +21,7 @@
         kategória alapján szűrés<br>
         ownhobbies category hianyzik -> új letárolás <br>
         offline mód <br>
+        jelszo hashelve tárolása<br>
         <br>
         - szűrés kategóriára <br>
         - profilt befejezni <br>
