--- a/src/app/publikus/components/login/login.component.html
+++ b/src/app/publikus/components/login/login.component.html
@@ -1,4 +1,4 @@
-[<div class="login-signup-container">
+<div class="login-signup-container">
     <div class="with_border">
         <h2>{{ "login" | translate }}</h2>
         <form #loginForm="ngForm" id="formId" (keydown.enter)="loginWithEmail()">
