--- a/src/app/hobbies/components/activity-wrap/activity-wrap.component.scss
+++ b/src/app/hobbies/components/activity-wrap/activity-wrap.component.scss
@@ -18,6 +18,10 @@ button{
     margin: 10px;
 }
 
+.out_iv{
+    margin: 15px;
+}
+
 .show_button{
     background-color: var(--success-color);
     border: 1px solid var(--dark-green-color);
