--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -16,6 +16,7 @@
     <div class="flex_div">
 
         TODO:<br>
+        Profil kis képernyőn nem látszik<br>
         privat oldalak levedese<br>
         normális kezdőlap<br>
         kategória alapján szűrés<br>
