--- a/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.html
+++ b/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.html
@@ -1,38 +1,35 @@
 <div class="dialog-div">
     <div class="header">
         <h2>{{ "record_hobby" | translate }}</h2>
-        <button type="button" matTooltip="{{'close' | translate}}" class="icon-button close-button" mat-icon-button (click)="closeDialog();">
+        <button type="button" matTooltip="{{'close' | translate}}" class="icon-button close-button" mat-icon-button
+            (click)="closeDialog();">
             <mat-icon>close</mat-icon>
         </button>
     </div>
     <form #recordHobby="ngForm" id="formId">
         <div class="mb-3 row">
-            <span>
-                {{ "spent_hours_label" | translate }}
-                <mat-form-field>
-                    <input matInput id="spentHours" class="form-control" type="number" required [(ngModel)]="activity.spentHours"
-                        name="spentHours" #spentHours="ngModel">
-                </mat-form-field>
-            </span>
+            <span>{{ "spent_hours_label" | translate }}</span>
+            <mat-form-field>
+                <input matInput id="spentHours" class="form-control matinput" type="number" required
+                    [(ngModel)]="activity.spentHours" name="spentHours" #spentHours="ngModel">
+            </mat-form-field>
         </div>
 
         <div class="mb-3 row">
-            <span>
-                {{ "hobby_date_label" | translate }}
-                <mat-form-field>
-                    <input matInput [matDatepicker]="picker" [(ngModel)]="activity.date" name="hobbyDate"
-                        #hobbyDate="ngModel" required >
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
-            </span>
+            <span>{{ "hobby_date_label" | translate }}</span>
+            <mat-form-field>
+                <input matInput [matDatepicker]="picker" [(ngModel)]="activity.date" name="hobbyDate"
+                    #hobbyDate="ngModel" required>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
         </div>
 
         <div class="mb-3 row">
             <span>{{ "hobby_notes_label" | translate }}</span>
             <mat-form-field>
-                <textarea  matInput id="hobbyNotes" class="form-control" rows="5" cols="50"
-                    [(ngModel)]="activity.notes" name="hobbyNotes" #hobbyNotes="ngModel"></textarea>
+                <textarea matInput id="hobbyNotes" class="form-control" rows="5" cols="50" [(ngModel)]="activity.notes"
+                    name="hobbyNotes" #hobbyNotes="ngModel"></textarea>
             </mat-form-field>
         </div>
 
@@ -40,7 +37,8 @@
         <div class="button-row">
             <span>
                 <button type="button" class="btn btn-success" (click)="saveHobby()">{{ "save" | translate }}</button>
-                <button type="button" class="btn btn-danger" (click)="closeDialog();">{{ "cancel" | translate }}</button>
+                <button type="button" class="btn btn-danger" (click)="closeDialog();">{{ "cancel" | translate
+                    }}</button>
             </span>
         </div>
 
