--- a/src/app/shared/components/profile/profile.component.scss
+++ b/src/app/shared/components/profile/profile.component.scss
@@ -12,12 +12,18 @@
   flex-direction: column;
 }
 
-.grid_table{
-  display: grid;
-  grid-template-columns: 200px 200px;
-  grid-template-rows: 50px 50px;
-  gap: 10px;
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: left;
+  flex-wrap: wrap;
 }
+
+.margo{
+  margin-left: 10px;
+}
+
 
 .data-div{
   display: flex;
@@ -50,14 +56,8 @@
   margin-left: auto;
   margin-right: auto;
   flex-wrap: wrap;
-}
 
-.flex_value{
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  flex-direction: row;
-  flex-wrap: wrap;
+  overflow: auto;
 }
 
 button{
