--- a/src/app/hobbies/components/hobby-list/hobby-list.component.html
+++ b/src/app/hobbies/components/hobby-list/hobby-list.component.html
@@ -1,5 +1,23 @@
 <div class="hobby-list">
-  <h2>{{ "hobby_list" | translate }}</h2>
+  <div class="filter_block">
+    <h2>{{ "hobby_list" | translate }}</h2>
+    <div class="inner_div">
+      <mat-form-field>
+        <mat-label>{{"categories_filter" | translate }}: </mat-label>
+        <mat-select [(ngModel)]="categoryFilter">
+          <mat-option *ngFor="let category of categories" [value]="category">
+            {{category.name | bilingualTranslate}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button class="btn btn-success" (click)="getHobbies()" [matTooltip]="'filter' | translate">
+        <mat-icon>filter_list</mat-icon>
+      </button>
+      <button class="btn btn-danger" (click)="categoryFilter = undefined; getHobbies();" [matTooltip]="'delete_filter' | translate ">
+        <mat-icon>clear</mat-icon>
+      </button>
+    </div>
+  </div>
   <div class="hobby-tile-container">
     <div class="hobby-tile" *ngFor="let hobby of hobbyList">
       <app-hobby-tile [hobby]="hobby" (addToOwnHobbiesEmitter)="addToOwnHobbies($event)"></app-hobby-tile>
