--- a/src/app/hobbies/components/own-hobbies/own-hobbies.component.html
+++ b/src/app/hobbies/components/own-hobbies/own-hobbies.component.html
@@ -1,8 +1,27 @@
 <div class="hobby-list">
-    <h2>{{ "own_hobbies" | translate }}</h2>
-    <button class="btn btn-primary" [routerLink]="['/', globalVariables.ROUTES.addNewHobby]">
-      {{'add_new_hobby' | translate }}
-    </button>
+    <div class="filter_block">
+      <h2>{{ "own_hobbies" | translate }}</h2>
+      <div class="inner_div">
+        <mat-form-field>
+          <mat-label>{{"categories_filter" | translate }}: </mat-label>
+          <mat-select [(ngModel)]="categoryFilter">
+            <mat-option *ngFor="let category of categories" [value]="category">
+              {{category.name | bilingualTranslate}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <button class="btn btn-success" (click)="getOwnHobbies()" [matTooltip]="'filter' | translate">
+          <mat-icon>filter_list</mat-icon>
+        </button>
+        <button class="btn btn-danger" (click)="categoryFilter = undefined; getOwnHobbies();" [matTooltip]="'delete_filter' | translate ">
+          <mat-icon>clear</mat-icon>
+        </button>
+        <button class="btn btn-primary" [routerLink]="['/', globalVariables.ROUTES.addNewHobby]" 
+          [matTooltip]="'add_new_hobby' | translate ">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
+    </div>
     <div class="hobby-tile-container">
       <div class="hobby-tile" *ngFor="let hobby of hobbyList">
         <app-hobby-tile [hobby]="hobby" (addToOwnHobbiesEmitter)="addToOwnHobby($event)"></app-hobby-tile>
