iconlogo +lap átnevezés, home rendezkedés

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -17,25 +17,22 @@
 
         TODO:<br>
         privat oldalak levedese<br>
-        normális kezdőlap<br>
-        kategória alapján szűrés<br>
-        ownhobbies category hianyzik -> új letárolás <br>
         offline mód <br>
-        jelszo hashelve tárolása<br>
+        adatbázis feltöltése<br>
+        tesztelés<br>
+        profilnál a saját hobbinak csak az id-ját kéne letárolni<br>
+    </div>
+    <div class="flex_div">
         <br>
-        - szűrés kategóriára <br>
-        - profilt befejezni <br>
-        - offline mód <br>
-        - szerkesztés: profil, activity, saját hobby<br>
-        - törlés: saját hobby<br>
+        továbbfejlesztési lehetőségek:<br>
         - új nyelv: német<br>
-        - Record hobby dialog telefonon nem jó<br>
+        - szerkesztés: profil, activity, saját hobby<br>
         - hobby kibövítése: hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby
-        level: beginner, intermediate, advanced, professional<br><br>
-        - profilnál a saját hobbinak csak az id-ját kéne letárolni<br>
-        - tesztelés <br>
+        level: beginner, intermediate, advanced, professional<br>
+        - activity kibővítése: képek feltöltése, helyszín, többi felhasználó társaságának jelölése
         <br>
-        összegző oldal: <br>
+        </div>
+    <div class="flex_div">
         kész funkciók: <br>
         - login <br>
         - register <br>
@@ -51,6 +48,7 @@
         - nyelvváltoztatás<br>
         - kategorizált hobbik<br>
         - activity törlése<br>
+        - kategória szűrés<br>
     </div>
 
 </div>
