--- a/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.html
+++ b/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.html
@@ -1,5 +1,5 @@
 <div class="outside_div">
-  <div class="inner_div">
+  <div class="inner_div2">
     <h2>{{ "add_new_hobby" | translate }}</h2>
     <form #newHobby="ngForm">
       <div class="mb-3 row">
