--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -30,8 +30,9 @@
         - hobby kibövítése: hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby
         level: beginner, intermediate, advanced, professional<br>
         - activity kibővítése: képek feltöltése, helyszín, többi felhasználó társaságának jelölése
+        -saját hobbi törlése
         <br>
-        </div>
+    </div>
     <div class="flex_div">
         kész funkciók: <br>
         - login <br>
@@ -49,6 +50,8 @@
         - kategorizált hobbik<br>
         - activity törlése<br>
         - kategória szűrés<br>
+        <br>
+        -saját hobbi törlése<br>
     </div>
 
 </div>
