--- a/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
+++ b/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
@@ -2,10 +2,16 @@
   <div class="header-colored">
     <div class="header">
       <h2>{{ hobby.name | bilingualTranslate}}</h2>
-      <button mat-icon-button class="icon-button" [matTooltip]="'add_to_own_hobbies' | translate"
-          (click)="addToOwnHobbies()">
-        <mat-icon>add</mat-icon>
-      </button>
+      <div>
+        <button mat-icon-button class="icon-button" [matTooltip]="'add_to_own_hobbies' | translate"
+            (click)="addToOwnHobbies()">
+          <mat-icon>add</mat-icon>
+        </button>
+        <button *ngIf="ownHobby" mat-icon-button class="icon-button" [matTooltip]="'delete_hobby' | translate"
+            (click)="deleteHobby()" style="color: red;">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
     </div>
     
     <div class="categories">
@@ -15,7 +21,7 @@
     </div>
   </div>
   <div class="content">
-    <button *ngIf="hobby" [routerLink]="['/', globalVariables.ROUTES.ownHobbies, hobby.id]" class="tile-image-button"
+    <button *ngIf="hobby" [routerLink]="['/', globalVariables.ROUTES.hobbyList, hobby.id]" class="tile-image-button"
       matTooltip="{{'details' | translate}}">
       <img [src]="hobby.imageUrl" alt="{{ hobby.name | bilingualTranslate}} image" class="tile-image" />
     </button>
