--- a/src/app/hobbies/components/activity-tile/activity-tile.component.html
+++ b/src/app/hobbies/components/activity-tile/activity-tile.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="activity" class="activity-tile">
-    <button class="icon-button" mat-icon-button [matMenuTriggerFor]="menu">
+    <button class="icon-button" mat-icon-button [matMenuTriggerFor]="menu" *ngIf="online">
         <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
