--- a/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
+++ b/src/app/hobbies/components/hobby-tile/hobby-tile.component.html
@@ -2,7 +2,7 @@
   <div class="header-colored">
     <div class="header">
       <h2>{{ hobby.name | bilingualTranslate}}</h2>
-      <div>
+      <div *ngIf="online">
         <button mat-icon-button class="icon-button" [matTooltip]="'add_to_own_hobbies' | translate"
             (click)="addToOwnHobbies()">
           <mat-icon>add</mat-icon>
