--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -17,10 +17,8 @@
 
         TODO:<br>
         privat oldalak levedese<br>
-        offline mód <br>
-        adatbázis feltöltése<br>
+        await indexeddb létrehozás<br>
         tesztelés<br>
-        profilnál a saját hobbinak csak az id-ját kéne letárolni<br>
     </div>
     <div class="flex_div">
         <br>
@@ -50,8 +48,8 @@
         - kategorizált hobbik<br>
         - activity törlése<br>
         - kategória szűrés<br>
-        <br>
         -saját hobbi törlése<br>
+        -offline mód<br>
     </div>
 
 </div>
